--- a/.github/workflows/trigger_wf.yaml
+++ b/.github/workflows/trigger_wf.yaml
@@ -27,7 +27,7 @@ jobs:
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/actions/workflows/triggered_wf.yaml/dispatches \
             -d '{
-              "ref": "NOV-243394_gh_update_jira",
+              "ref": "main",
               "inputs": {
                 "basename": "$name"
               }
