--- a/.github/workflows/trigger_wf.yaml
+++ b/.github/workflows/trigger_wf.yaml
@@ -26,12 +26,12 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.WF_PAT }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/actions/workflows/triggered_wf.yaml/dispatches \
-            -d '{
-              "ref": "main",
-              "inputs": {
-                "basename": "$name"
-              }
-            }'
+            -d "{
+                \"ref\": \"main\",
+                \"inputs\": {
+                  \"basename\": \"$name\"
+                    }
+                }"
             break
           done
           
