--- a/.github/workflows/triggered_wf.yaml
+++ b/.github/workflows/triggered_wf.yaml
@@ -42,6 +42,8 @@ jobs:
     strategy:
         matrix: ${{fromJson(needs.get_matrix_features.outputs.matrix)}}
     steps:
+        - name: Checkout repo
+          uses: actions/checkout@v4 
         - name: Run action for each file
           id: get-jira-version
           uses: './.github/actions/update-scenarios'
