--- a/.github/workflows/triggered_wf.yaml
+++ b/.github/workflows/triggered_wf.yaml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
     inputs:
       basename:
-        description: 'the basename'
+        description: 'the basename of the directory to search for features'
         required: true
 
 jobs:
