--- a/.github/workflows/trigger_wf.yaml
+++ b/.github/workflows/trigger_wf.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
         FEATURES_PATH: "./acceptance/features/e2e/app/novum"
-        EXCLUDED_PATH_REGEX: '.*\/(_setup|jenkins)'
+        EXCLUDED_PATH_REGEX: '.*\/(_setup|jenkins|steps|__pycache__)|novum$'
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -17,7 +17,7 @@ jobs:
         id: set-matrix-base
         shell: bash
         run: |
-          basenames=$(find ${{ env.FEATURES_PATH }} -maxdepth 1 -type d | grep -v -E "${{ env.EXCLUDED_PATH_REGEX }}" | grep -v "/novum$" )
+          basenames=$(find ${{ env.FEATURES_PATH }} -maxdepth 1 -type d | grep -v -E "${{ env.EXCLUDED_PATH_REGEX }}")
           for name in $basenames; do
             echo "Basename: $name"
             curl -X POST \
