fix env features path

--- a/.github/workflows/trigger_wf.yaml
+++ b/.github/workflows/trigger_wf.yaml
@@ -14,7 +14,7 @@ jobs:
   get_basenames_and_trigger_workflows:
     runs-on: ubuntu-latest
     env:
-        FEATURES_PATH: "./acceptance/features/e2e/${{ github.event.inputs.type }}"
+        FEATURES_PATH: "./acceptance/features/e2e/${{ github.event.inputs.type }}/${{ github.event.inputs.project }}"
         EXCLUDED_PATH_REGEX: '.*\/(_setup|jenkins|steps|__pycache__)|${{ github.event.inputs.project }}$'
     steps:
       - name: Checkout repo
