--- a/.github/workflows/trigger_wf.yaml
+++ b/.github/workflows/trigger_wf.yaml
@@ -37,5 +37,6 @@ jobs:
                   \"basename\": \"$name\"
                     }
                 }"
+            break
           done
           
