--- a/.github/workflows/triggered_wf.yaml
+++ b/.github/workflows/triggered_wf.yaml
@@ -34,6 +34,7 @@ jobs:
             echo "Feature file provided: ${{ github.event.inputs.feature }}"
             feature="${{ github.event.inputs.feature }}"
           fi
+          echo "Feature: $feature"
 
           files=$(find ${{ github.event.inputs.basename }} -type f -name "${feature}")
           echo "Found files: $files"
