--- a/.github/workflows/triggered_wf.yaml
+++ b/.github/workflows/triggered_wf.yaml
@@ -36,7 +36,7 @@ jobs:
           fi
           echo "Feature: $feature"
 
-          files=$(find ${{ github.event.inputs.basename }} -type f -name "${feature}")
+          files=$(find ${{ github.event.inputs.basename }} -type f -name "$feature")
           echo "Found files: $files"
           matrix="::set-output name=matrix::{\"include\":["
           for file in $files; do
