--- a/.github/workflows/triggered_wf.yaml
+++ b/.github/workflows/triggered_wf.yaml
@@ -39,7 +39,15 @@ jobs:
           echo "path: ${{ github.event.inputs.basename }}"
 
           files=$(find ${{ github.event.inputs.basename }} -type f -name "$feature")
-          echo "Found files: $files"
+
+          if [ -n "${{ github.event.inputs.feature }}"];then
+            file_array=($files)
+            num_files=${#file_array[@]}
+            if [ $num_files > 1 ]; then
+              echo "Multiple files found, please provide a more specific basename"
+              exit 1
+            fi
+          fi
           matrix="::set-output name=matrix::{\"include\":["
           for file in $files; do
             file=$(echo $file | sed 's|./acceptance/||')
