--- a/.github/workflows/triggered_wf.yaml
+++ b/.github/workflows/triggered_wf.yaml
@@ -72,9 +72,15 @@ jobs:
         
         - name: Get locales and environments
           id: get_locales_env
-          uses: './.github/actions/get-locales-environment'
-          with:
-            project: ${{ github.event.inputs.project }}
+          shell: bash
+          run: |
+            if [ ${{ github.event.inputs.project }} == 'QABP' ]; then
+              echo "locales=was:was_de-de" >> $GITHUB_OUTPUT
+              echo "environments=was:was-live" >> $GITHUB_OUTPUT
+            elif [ ${{ github.event.inputs.project }} == 'QANOV' ]; then
+              echo "locales=blaude:blaude_de-de,vivobr:vivobr_pt-br,o2uk:o2uk_en-gb,moves:moves_es-es,o2de:o2de_de-de,o2es:o2es_es-es" >> $GITHUB_OUTPUT
+              echo "environments=blaude:blaude-live,vivobr:vivobr-live,o2uk:o2uk-live,moves:moves-live,o2de:o2de-live,o2es:o2es-live" >> $GITHUB_OUTPUT
+            fi
 
         - name: Run action for each file
           id: get-jira-version
