--- a/.github/actions/trigger-jira-wf/action.yaml
+++ b/.github/actions/trigger-jira-wf/action.yaml
@@ -2,6 +2,9 @@ name: Trigger Jira workflow
 description: 'Trigger Jira workflow'
 
 inputs:
+  secret_token:
+    required: true
+    description: 'Secret token'
   project:
     required: true
     description: "project"
@@ -23,7 +26,7 @@ runs:
           for name in $basenames; do
             echo "Basename: $name"
             curl -X POST \
-            -H "Authorization: Bearer ${{ secrets.WF_PAT }}" \
+            -H "Authorization: Bearer ${{ inputs.secret_token }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/actions/workflows/triggered_wf.yaml/dispatches \
             -d "{
