--- a/.github/workflows/trigger_wf.yaml
+++ b/.github/workflows/trigger_wf.yaml
@@ -25,6 +25,7 @@ jobs:
           EXCLUDED_PATH_REGEX: '.*\/(_setup|jenkins|steps|__pycache__)|novum$'
         uses: './.github/actions/trigger-jira-wf'
         with:
+          secret_token: ${{ secrets.WF_PAT }}
           project: ${{ github.event.inputs.project }}
           features_path: ${{ env.FEATURES_PATH }}
           excluded_path: ${{ env.EXCLUDED_PATH_REGEX }}
@@ -37,6 +38,7 @@ jobs:
           EXCLUDED_PATH_REGEX: '.*\/(_setup|jenkins|steps|__pycache__)|novum$'
         uses: './.github/actions/trigger-jira-wf'
         with:
+          secret_token: ${{ secrets.WF_PAT }}
           project: ${{ github.event.inputs.project }}
           features_path: ${{ env.FEATURES_PATH }}
           excluded_path: ${{ env.EXCLUDED_PATH_REGEX }}
@@ -48,6 +50,7 @@ jobs:
           EXCLUDED_PATH_REGEX: '.*\/(_setup|jenkins|steps|__pycache__)|cms$'
         uses: './.github/actions/trigger-jira-wf'
         with:
+          secret_token: ${{ secrets.WF_PAT }}
           project: ${{ github.event.inputs.project }}
           features_path: ${{ env.FEATURES_PATH }}
           excluded_path: ${{ env.EXCLUDED_PATH_REGEX }}
