added action to create venv

--- a/.github/workflows/checkout_wf.yaml
+++ b/.github/workflows/checkout_wf.yaml
@@ -21,10 +21,16 @@ jobs:
         - name: echo workspace
           run: echo $GITHUB_WORKSPACE
 
-        - name: Clean workspace
-          shell: bash -leo pipefail {0}
-          run:
-            rm -rf ${{ github.workspace }}/*
+        - name: Create venv
+          uses: './.github/actions/setup-venv'
 
-        - name: List files after clean
+        - name: list files after venv
           run: ls -la
+
+        # - name: Clean workspace
+        #   shell: bash -leo pipefail {0}
+        #   run:
+        #     rm -rf ${{ github.workspace }}/*
+
+        # - name: List files after clean
+        #   run: ls -la
