--- a/.github/workflows/checkout_wf.yaml
+++ b/.github/workflows/checkout_wf.yaml
@@ -21,7 +21,16 @@ jobs:
         - name: echo workspace
           run: echo $GITHUB_WORKSPACE
 
+        - name: Find cache
+          id: cache
+          uses: actions/cache@v4
+          with:
+            path: ${{ github.workspace }}/.venv
+            key: venv-${{ runner.os }}-${{ runner.arch }}-pip-${{ hashFiles('acceptance/requirements.txt') }}
+            lookup-only: true
+
         - name: Create venv
+          if: steps.cache.outputs.cache-hit != 'true'
           uses: './.github/actions/setup-venv'
 
         - name: list files after venv
