restore checkout wf

--- a/.github/workflows/delete_cache_wf.yaml
+++ b/.github/workflows/delete_cache_wf.yaml
@@ -15,7 +15,7 @@ jobs:
         run: |
           echo "Fetching list of cache key"
           cacheKeys=$(gh cache list --ref $BRANCH --limit 10 --json id --jq '.[].id')
-          echo "Cache keys: $cacheKeys"
+          echo "Cache key ids: $cacheKeys"
           
 
           ## Setting this to not fail the workflow while deleting cache keys.
@@ -23,7 +23,7 @@ jobs:
           echo "Deleting caches..."
           for cacheKey in $cacheKeys
           do
-              echo "Deleting cache key: $cacheKey"
+              echo "Deleting cache key id: $cacheKey"
               gh cache delete $cacheKey
           done
           echo "Done"
