--- a/.github/workflows/delete_cache_wf.yaml
+++ b/.github/workflows/delete_cache_wf.yaml
@@ -1,4 +1,4 @@
-name: cleanup caches by a branch
+name: Cleanup cache by a branch
 on:
   workflow_dispatch:
     inputs:
@@ -11,23 +11,8 @@ jobs:
   cleanup:
     runs-on: ubuntu-latest
     steps:
-      - name: Cleanup
-        run: |
-          echo "Fetching list of cache key"
-          cacheKeys=$(gh cache list --ref $BRANCH --limit 10 --json id --jq '.[].id')
-          echo "Cache_key ids: $cacheKeys"
-          
-
-          ## Setting this to not fail the workflow while deleting cache keys.
-          set +e
-          echo "Deleting caches..."
-          for cacheKey in $cacheKeys
-          do
-              echo "Deleting cache_key id: $cacheKey"
-              gh cache delete $cacheKey
-          done
-          echo "Done"
-        env:
-          GH_TOKEN: ${{ secrets.WF_NEW }}
-          GH_REPO: ${{ github.repository }}
-          BRANCH: refs/heads/${{ github.event.inputs.branch }}
+      - name: Clean cache
+        uses: './.github/actions/clean-cache'
+        with:
+          secret_token: ${{ secrets.WF_PAT }}
+          branch: ${{ github.event.inputs.branch }}
