--- a/.github/workflows/delete_cache_wf.yaml
+++ b/.github/workflows/delete_cache_wf.yaml
@@ -11,6 +11,12 @@ jobs:
   cleanup:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: "${{ github.ref }}"
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Clean cache
         uses: './.github/actions/clean-cache'
         with:
